--- a/Apollo/imgui.ini
+++ b/Apollo/imgui.ini
@@ -1,10 +1,15 @@
 [Debug]
-Pos=60,60
+Pos=388,84
 Size=400,400
 Collapsed=0
 
 [ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=-2,1
+Size=354,749
+Collapsed=0
+
+[Assets]
+Pos=0,-3
+Size=200,800
 Collapsed=0
 
