换成最新的imgui

--- a/Apollo/imgui.ini
+++ b/Apollo/imgui.ini
@@ -1,15 +1,20 @@
-[Debug]
+[Window][Debug]
 Pos=388,84
 Size=400,400
 Collapsed=0
 
-[ImGui Demo]
+[Window][ImGui Demo]
 Pos=-2,1
 Size=354,749
 Collapsed=0
 
-[Assets]
+[Window][Assets]
 Pos=0,-3
 Size=200,800
+Collapsed=0
+
+[Window][Debug##Default]
+Pos=550,79
+Size=400,400
 Collapsed=0
 
