--- a/Apollo/imgui.ini
+++ b/Apollo/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=-2,1
+Pos=1,-1
 Size=354,749
 Collapsed=0
 
@@ -14,7 +14,12 @@ Size=200,800
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=550,79
+Pos=516,75
 Size=400,400
+Collapsed=0
+
+[Window][Log]
+Pos=253,551
+Size=600,200
 Collapsed=0
 
