继续资源管理

--- a/Apollo/imgui.ini
+++ b/Apollo/imgui.ini
@@ -19,7 +19,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=201,572
+Pos=201,539
 Size=600,200
+Collapsed=0
+
+[Window][Property]
+Pos=980,0
+Size=300,800
 Collapsed=0
 
