--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -249,11 +249,14 @@
     <ClInclude Include="DX11\TextureDX11ResourceFactory.h">
       <Filter>Dx11</Filter>
     </ClInclude>
-    <ClInclude Include="DX11\TextureDX11Resource.h">
-      <Filter>Dx11</Filter>
-    </ClInclude>
     <ClInclude Include="Base\CharacterTools.h">
       <Filter>Base</Filter>
+    </ClInclude>
+    <ClInclude Include="DX11\DX11Renderer.h">
+      <Filter>Dx11</Filter>
+    </ClInclude>
+    <ClInclude Include="DX11\Texture2dDX11.h">
+      <Filter>Dx11</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -403,6 +406,15 @@
     </ClCompile>
     <ClCompile Include="Base\CharacterTools.cpp">
       <Filter>Base</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\DX11Renderer.cpp">
+      <Filter>Dx11</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\TextureDX11ResourceFactory.cpp">
+      <Filter>Dx11</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\Texture2dDX11.cpp">
+      <Filter>Dx11</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
