--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Base\Material">
       <UniqueIdentifier>{bbba217c-0ab6-4d1a-9495-cd8976090686}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Graphics">
+      <UniqueIdentifier>{8bfe0a21-3cb2-4791-be42-f3828f9986de}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -228,6 +231,27 @@
     <ClInclude Include="DX11\Texture2dDX11.h">
       <Filter>Dx11</Filter>
     </ClInclude>
+    <ClInclude Include="DX11\TextureCubeMapDX11.h">
+      <Filter>Dx11</Filter>
+    </ClInclude>
+    <ClInclude Include="DX11\Texture2dConfigDX11.h">
+      <Filter>Dx11</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\RenderPass.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\IRenderable.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\IScene.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\Camera.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\Task.h">
+      <Filter>Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -375,6 +399,12 @@
       <Filter>Dx11</Filter>
     </ClCompile>
     <ClCompile Include="DX11\Texture2dDX11.cpp">
+      <Filter>Dx11</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\TextureCubeMapDX11.cpp">
+      <Filter>Dx11</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\Texture2dConfigDX11.cpp">
       <Filter>Dx11</Filter>
     </ClCompile>
   </ItemGroup>
