--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -175,6 +175,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="DX11\DX11Renderer.h" />
     <ClInclude Include="DX11\imgui_impl_dx11.h" />
     <ClInclude Include="DX11\IResourceDX11.h" />
+    <ClInclude Include="DX11\RenderStateDX11.h" />
     <ClInclude Include="DX11\Texture2dConfigDX11.h" />
     <ClInclude Include="DX11\Texture2dDX11.h" />
     <ClInclude Include="DX11\TextureCubeMapDX11.h" />
@@ -240,6 +241,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="Base\ResourceManager.cpp" />
     <ClCompile Include="DX11\DX11Renderer.cpp" />
     <ClCompile Include="DX11\imgui_impl_dx11.cpp" />
+    <ClCompile Include="DX11\RenderStateDX11.cpp" />
     <ClCompile Include="DX11\Texture2dConfigDX11.cpp" />
     <ClCompile Include="DX11\Texture2dDX11.cpp" />
     <ClCompile Include="DX11\TextureCubeMapDX11.cpp" />
