--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -200,6 +200,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="Math\Vector2f.h" />
     <ClInclude Include="Math\Vector3f.h" />
     <ClInclude Include="Math\Vector4f.h" />
+    <ClInclude Include="Sample\GPUParticleSample.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UI\AssetsDirectoryViewUI.h" />
@@ -261,6 +262,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="Math\Vector2f.cpp" />
     <ClCompile Include="Math\Vector3f.cpp" />
     <ClCompile Include="Math\Vector4f.cpp" />
+    <ClCompile Include="Sample\GPUParticleSample.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
