--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -267,6 +267,9 @@
     <ClInclude Include="Graphics\VertexFormat.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Sample\GPUParticleSample.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -432,6 +435,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="DX11\GeometryDX11.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Sample\GPUParticleSample.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
