--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClInclude Include="Sample\GPUParticleSample.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DX11\ShaderDX11.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -438,6 +441,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Sample\GPUParticleSample.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\ShaderDX11.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
