--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -29,7 +29,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -87,13 +87,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;NOMINMAX;_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\;.\DX11;.\ImGUI;.\Base;.\ImGui;.\Math;.\Windows;.\Lib\freetype\include;.\UI;.\third_party;.\third_party\boost_context\include;.\third_party\DirectXTex\include;.\Graphics;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\;.\DX11;.\ImGUI;.\Base;.\ImGui;.\Math;.\Windows;.\Lib\freetype\include;.\UI;.\third_party;.\third_party\boost_context\include;.\third_party\DirectXTex\include;.\Graphics;.\Sample;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(ProjectDir)Lib\freetype\lib\x32;.\third_party\boost_context\lib;.\third_party\DirectXTex\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;dxgi.lib;freetype263MTd.lib;boost_context.lib;DirectXTex.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>LIBCMTD.lib</IgnoreSpecificDefaultLibraries>
     </Link>
     <PostBuildEvent>
@@ -172,6 +172,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="Base\ResourceManager.h" />
     <ClInclude Include="Base\Singleton.h" />
     <ClInclude Include="Base\TextureResource.h" />
+    <ClInclude Include="Base\Timer.h" />
     <ClInclude Include="DX11\BufferManagerDX11.h" />
     <ClInclude Include="DX11\GeometryDX11.h" />
     <ClInclude Include="DX11\imgui_impl_dx11.h" />
@@ -180,6 +181,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="DX11\RendererDX11.h" />
     <ClInclude Include="DX11\RenderStateDX11.h" />
     <ClInclude Include="DX11\ShaderDX11.h" />
+    <ClInclude Include="DX11\ShaderParameterDX11.h" />
     <ClInclude Include="DX11\Texture2dConfigDX11.h" />
     <ClInclude Include="DX11\Texture2dDX11.h" />
     <ClInclude Include="DX11\TextureCubeMapDX11.h" />
@@ -245,12 +247,14 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="Base\miniz.cpp" />
     <ClCompile Include="Base\ofbx.cpp" />
     <ClCompile Include="Base\ResourceManager.cpp" />
+    <ClCompile Include="Base\Timer.cpp" />
     <ClCompile Include="DX11\BufferManagerDX11.cpp" />
     <ClCompile Include="DX11\GeometryDX11.cpp" />
     <ClCompile Include="DX11\imgui_impl_dx11.cpp" />
     <ClCompile Include="DX11\RendererDX11.cpp" />
     <ClCompile Include="DX11\RenderStateDX11.cpp" />
     <ClCompile Include="DX11\ShaderDX11.cpp" />
+    <ClCompile Include="DX11\ShaderParameterDX11.cpp" />
     <ClCompile Include="DX11\Texture2dConfigDX11.cpp" />
     <ClCompile Include="DX11\Texture2dDX11.cpp" />
     <ClCompile Include="DX11\TextureCubeMapDX11.cpp" />
