--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -279,6 +279,9 @@
     <ClInclude Include="Base\Timer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DX11\ConstantBufferDX11.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -456,6 +459,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Base\Timer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\ConstantBufferDX11.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\StructuredBufferDX11.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
