--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -285,6 +285,9 @@
     <ClInclude Include="Sample\ComputerShaderProcessTexture.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DX11\MeshDX11.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
