完成compute shader process texture例子

--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -291,6 +291,9 @@
     <ClInclude Include="Base\VertexStruct.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Sample\HeightMapTerrain.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -480,6 +483,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="DX11\MeshDX11.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Sample\HeightMapTerrain.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics\Camera.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
